Alterando para nome correto

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,5 +1,5 @@
 {
-  "Welcome": "Escolha sua língua",
+  "EscolhaSuaLingua": "Escolha sua língua",
   "Portuguese": "Portugues",
   "English": "Ingles"
 }
