--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "Welcome": "Select your language",
+  "EscolhaSuaLingua": "Select your language",
   "Portugues": "Portuguese",
   "Ingles": "English"
 }
