Atualizações SCSS + Service do projeto

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
     "BemVindo": "Welcome!"
   },
   "Menu": {
+    "Casa": "Home",
     "Projetos": "Projects",
     "Cursos": "Courses",
     "Contato": "Contact"
