--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -6,6 +6,7 @@
     "BemVindo": "Bem-Vindo!"
   },
   "Menu": {
+    "Casa": "Casa",
     "Projetos": "Projetos",
     "Cursos": "Cursos",
     "Contato": "Contato"
