Responsividade pro celular

--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -2,7 +2,7 @@
   "Portuguese": "Portugues",
   "English": "Ingles",
   "Inicio": {
-    "EscolhaSuaLingua": "Escolha sua língua",
+    "EscolhaSuaLingua": "Escolha seu idioma",
     "BemVindo": "Bem-Vindo!"
   },
   "Menu": {
