--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -65,8 +65,8 @@
       "Linkedin": {
         "Descricao": "Se você deseja se conectar ou entrar em contato comigo o LinkedIn é uma ótima maneira de estabelecer uma conexão profissional. Fique à vontade para enviar uma mensagem, compartilhar informações ou fazer perguntas diretamente por meio da plataforma.\n\n Estou ansioso para conhecer você e discutir oportunidades de colaboração, networking e compartilhamento de conhecimento.\n\nClique no icone para acessar meu perfil no LinkedIn e iniciar uma conversa.\n\nEstou comprometido em construir relacionamentos profissionais significativos e espero receber sua mensagem em breve!"
       },
-      "WhatsApp": {
-        "Descricao": "Quero tornar o contato o mais fácil possível para você. Se você tiver alguma pergunta, comentário ou simplesmente quiser conversar, fique à vontade para me enviar uma mensagem no WhatsApp.\n\nEstou pronto para responder a qualquer dúvida que você possa ter.\n\n Clique no icone para iniciar uma conversa no whatsapp comigo.\n\nAgradeço pelo seu interesse em me contatar e aguardo ansiosamente por suas mensagens!"
+      "GitHub": {
+        "Descricao": "Fique à vontade para dar uma olhada no meu perfil do GitHub.\n\nO GitHub é a plataforma onde apresento uma ampla variedade dos meus projetos pessoais, profissionais e colaborativos no campo do desenvolvimento.\n\nAo explorar meus repositórios no GitHub, você obterá informações valiosas sobre meu conjunto de habilidades, realizações notáveis e entusiasmo genuíno pela área."
       },
       "Gmail": {
         "Descricao": "Fico feliz em ouvir de você! Se você tiver alguma pergunta, sugestão ou comentário, por favor, sinta-se à vontade para me enviar um e-mail.\n\nO Gmail é uma forma eficaz de se comunicar de maneira detalhada e ter a certeza de que receberei sua mensagem.\n\nEnvie sua mensagem para:\ngabriel.c.depaula@gmail.com\n\nEstou sempre pronto para ajudar e responder a qualquer pergunta que você possa ter.\n\nEspero receber suas mensagens em minha caixa de entrada em breve!"
