--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -65,8 +65,8 @@
       "Linkedin": {
         "Descricao": "If you wish to connect or get in touch with me, LinkedIn is a great way to establish a professional connection. Feel free to send a message, share information, or ask questions directly through the platform.\n\nI'm looking forward to getting to know you and discussing opportunities for collaboration, networking, and knowledge sharing.\n\nClick on the icon to access my LinkedIn profile and initiate a conversation.\n\nI am committed to building meaningful professional relationships and look forward to receiving your message soon!"
       },
-      "WhatsApp": {
-        "Descricao": "I want to make contacting me as easy as possible for you. If you have any questions, comments, or just want to chat, feel free to send me a message on WhatsApp.\n\nI'm ready to address any inquiries you may have.\n\nClick on the icon to start a conversation on WhatsApp with me.\n\nWe appreciate your interest in reaching out to us and look forward to receiving your messages eagerly!"
+      "GitHub": {
+        "Descricao": "Feel free to take a look at my GitHub profile.\n\nGitHub serves as the platform where I showcase a wide array of my personal, professional, and collaborative projects in the realm of development.\n\nBy exploring my GitHub repositories, you'll gain valuable insights into my skill set, notable accomplishments, and genuine enthusiasm for the field."
       },
       "Gmail": {
         "Descricao": "I'm glad to hear from you! If you have any questions, suggestions, or comments, please feel free to send me an email.\n\nGmail is an effective way to communicate in detail and ensure that I'll receive your message.\n\nSend your message to:\ngabriel.c.depaula@gmail.com\n\nI'm always ready to assist and respond to any questions you might have.\n\nI look forward to receiving your messages in my inbox soon!"
